# HTMACat-kit

./: .gitignore  .pre-commit-config.yaml  README.md  install_wheel.bat  install_wheel.sh  pyproject.toml  requirements.txt  setup.py  test.txt
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: auto_gen_whl.yml  main.yml  test.yml
HTMACat/: Base_tools.py  CRN.py  Extract_info.py  IO.py  Show_net.py  Split.py  __version__.py  command.py  configuration.py
HTMACat/NEB/: Construct_neb.py  Construct_network.py  Dismove.py  Post_struc.py  post_neb.py  vaspneb6.py
HTMACat/catkit/: __init__.py  build.py  gratoms.py  readme.txt
HTMACat/catkit/data/: properties.json
HTMACat/descriptor/: Construct_descriptor.py  Construct_descriptor_NEB.py  Construct_descriptor_coad.py  Construct_descriptor_surface.py  Construct_descriptor_surface_single.py  Element_Info
HTMACat/model/: Ads.py  Construct_adsorption_yaml.py  Species.py  Structure.py  Substrate.py
HTMACat/post/: Extract_adener.py  Extract_adener_alloy.py  Extract_adener_site.py  Extract_cal_fre.py  cal_adsE.py
docs/: .buildinfo  Examples.html  Examples.rst  Get_start.html  Get_start.rst  Getting_started.html  Getting_started.rst  HTMACat.NEB.html  HTMACat.NEB.rst  HTMACat.catkit.data.html  HTMACat.catkit.gen.html  HTMACat.catkit.gen.utils.html  HTMACat.catkit.gen.utils.rst  HTMACat.catkit.html  HTMACat.descriptor.html  HTMACat.descriptor.rst  HTMACat.html  HTMACat.model.html  HTMACat.post.html  HTMACat.post.rst  Installation.html  Installation.rst  Usage.html  Usage.rst  conf.py  dirnamefile  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/Examples_docs/: Example_CO2Reduction_ads.html  Example_CO2Reduction_ads.rst  Example_CO_PROX.html  Example_CO_PROX.rst  Example_Formic_acid_ads.html  Example_Formic_acid_ads.rst  Example_Formic_acid_ads_sml.html  Example_Formic_acid_ads_sml.rst  Example_Formic_acid_ads_supercell.html  Example_Nanoparticle.html  Example_Nanoparticle.rst  Example_TMA_ads.html  description.html  description.rst
docs/_modules/: index.html
docs/_modules/HTMACat/: Base_tools.html  Extract_info.html  IO.html  command.html
docs/_sources/: Examples.rst.txt  Get_start.rst.txt  Getting_started.rst.txt  HTMACat.NEB.rst.txt  HTMACat.catkit.data.rst.txt  HTMACat.catkit.gen.rst.txt  HTMACat.catkit.gen.utils.rst.txt  HTMACat.catkit.rst.txt  HTMACat.model.rst.txt  HTMACat.rst.txt  Installation.rst.txt  Usage.rst.txt  index.rst.txt  modules.rst.txt
docs/_sources/Examples_docs/: Example_CO2Reduction_ads.rst.txt  Example_CO_PROX.rst.txt  Example_Formic_acid_ads.rst.txt  Example_Formic_acid_ads_supercell.rst.txt  Example_Nanoparticle.rst.txt  Example_TMA_ads.rst.txt  description.rst.txt
docs/_static/: documentation_options.js
example/Auto-rotate_20230901/coads-Al(OPri)2_Pri/: config.yaml
example/CO2_reduction/: config.yaml
example/CO_PROX/: config.yaml
example/CRNG_demo/: CRNGenerator_log.txt  ReactInfo
example/CRN_2_htma_demo/: config.yaml
example/Formic_acid_ads/: config.yaml
example/Formic_acid_ads-SML/: StrucInfo  config.yaml
example/Formic_acid_ads_441/: config.yaml
example/Nanoparticle/: Pt43_particle  config.yaml
example/TMA/: config.yaml
example/adsorb/: 1.xyz  CONTCAR  config.yaml  说明.txt
example/coads/: config.yaml
example/coads-SML/: config.yaml
example/coadsorption/: Model
example/different_type_species/: NH3+.xyz  config.yaml
example/single-adsorption/: Model
example/split/: CONTCAR  说明.txt
example/yaml/: config.yaml
example/yaml_diff_facet/: config.yaml
example/yaml_read_struct/: POSCARslab  config.yaml
requires_wheel/: CatKit-0.5.4-py3-none-any.whl  FireWorks-2.0.3-py3-none-any.whl  HTMACat-1.0.0-py3-none-any.whl
script/: install.bat  install.sh
src/: MINIFEST.IN  config.yaml  pyproject.toml  requirements.txt  setup.py
src/HTMACat/: Base_tools.py  Extract_info.py  IO.py  command.py  configuration.py
src/HTMACat/NEB/: Construct_neb.py  Construct_network.py  Dismove.py  Extract_info.py  Post_struc.py  post_neb.py
src/HTMACat/catkit/data/: fingerprints.db
src/HTMACat/descriptor/: Construct_descriptor.py  Construct_descriptor_NEB.py  Construct_descriptor_coad.py  Construct_descriptor_surface.py  Construct_descriptor_surface_single.py  Element_Info  Element_Info_bk
src/HTMACat/model/: Ads.py  Construct_Coadsorption.py  Construct_adsorption.py  Construct_bulk.py  Construct_model.py  Construct_slabs.py  Substrate.py  utils.py
src/HTMACat/post/: Extract_adener.py  Extract_adener_alloy.py  Extract_adener_site.py  Extract_info.py  cal_adsE.py
src/HTMACat/test/test_IO/: Model  config.yaml  config_b1.yaml  config_dope_type.yaml  config_sml.yaml  test.py
test/: test_IO.py  test_IO.yaml  test_adsorption.py  test_bulk.py  test_coadsorption.py  test_slab.py  test_species.py
tests/: test_ads.py  test_coads.py  test_yaml.py
(+77 files in other folders)
