[tool.poetry]
name = "HTMACat"
version = "1.0.5"
description = "A high-throughput modeling, calculation, and analysis framework for catalytic reaction processes."
license = "GPLv3"
keywords = ["high-throughput", "python", "catalysis", "modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",]
homepage = "https://stanfordbshan.github.io/HTMACat-kit/"
authors = [
    "Jiaqiang Yang <jqyang_hust@hust.edu.cn>", 
    "Feifeng Wu <wufeifeng_hust@163.com>", 
    "Bin Shan <bshan@mail.hust.edu.cn>",
    "Zhaojie Wang <zhihongzh_chem@126.com>",
    "Yuxiao Lan <husterlanxxt@163.com>",
    "Haojie Li <1197946404@qq.com>",
    "Zhang Liu <zhangliu@hust.edu.cn>",
    "Zhihong Zhang <zhihongzh_chem@126.com>"]
documentation = "https://stanfordbshan.github.io/HTMACat-kit/"
repository = "https://github.com/stanfordbshan/HTMACat-kit"
include = [
    "HTMACat/",]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
ase = ">=3.19"
networkx = ">=2.1"
numpy = ">=1.20.0"
rdkit = ">=2022.3.3"
"ruamel.yaml" = ">0.15"
scipy = ">=0.1"
spglib = ">=0.1"
typer = { version = ">=0.6", extras = ["all"] }


[tool.poetry.scripts]
htmat = "HTMACat.command:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"