[tool.poetry]
name = "HTMACat"
version = "1.0.5"
description = "A high-throughput modeling, calculation, and analysis framework for catalytic reaction processes."
license = "GPLv3"
keywords = ["high-throughput", "python", "catalysis", "modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",]
homepage = "https://stanfordbshan.github.io/HTMACat-kit/"
authors = [
    "Jiaqiang Yang <jqyang_hust@hust.edu.cn>",
    "Feifeng Wu <wufeifeng_hust@163.com>",
    "Bin Shan <bshan@mail.hust.edu.cn>",
    "Zhaojie Wang <zhihongzh_chem@126.com>",
    "Yuxiao Lan <husterlanxxt@163.com>",
    "Haojie Li <1197946404@qq.com>",
    "Zhang Liu <zhangliu@hust.edu.cn>",
    "Zhihong Zhang <zhihongzh_chem@126.com>"]
documentation = "https://stanfordbshan.github.io/HTMACat-kit/"
repository = "https://github.com/stanfordbshan/HTMACat-kit"
include = [
    "HTMACat/",]
readme = "README.md"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.poetry.scripts]
htmat = "HTMACat.command:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
